# fake-schema

./: .gitignore  .npmrc  Cargo.toml  dev.ts  dev_schema.json  dev_schema.jsonc  notes.md  package.json  pnpm-lock.yaml  scratch.md  tsconfig.json
examples/: org.jsonc  ssb.jsonc
src/: inspect.rs  main.rs  parse.rs  utils.rs
