[package]
name = "fake-schema"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
daggy = "0.8"
fake = "4.3"
nom = "8"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
jsonptr = { version = "0.7", default-features = false, features = ["std", "json", "resolve", "assign"] }
